--- a/index.html
+++ b/index.html
@@ -53,6 +53,62 @@
                 </div>
             </main>
 
+            <section class="features">
+                <div class="feature-item">
+                    <div class="feature-text">
+                        <h2>Học tập theo nhóm</h2>
+                        <p>
+                            Kết nối với những người học cùng đam mê. Tạo hoặc
+                            tham gia các nhóm học tập để cùng nhau tiến bộ, chia
+                            sẻ kiến thức và động viên lẫn nhau trên hành trình
+                            phát triển kỹ năng.
+                        </p>
+                    </div>
+                    <div class="feature-image">
+                        <img
+                            src="/assets/feature1.jpeg"
+                            alt="Học tập theo nhóm"
+                        />
+                    </div>
+                </div>
+
+                <div class="feature-item reverse">
+                    <div class="feature-text">
+                        <h2>Khóa học đa dạng</h2>
+                        <p>
+                            Truy cập hàng nghìn khóa học từ cơ bản đến nâng cao
+                            trong nhiều lĩnh vực: lập trình, thiết kế, kinh
+                            doanh, ngoại ngữ và nhiều hơn nữa. Học mọi lúc, mọi
+                            nơi theo tốc độ của bạn.
+                        </p>
+                    </div>
+                    <div class="feature-image">
+                        <img
+                            src="/assets/feature2.jpg"
+                            alt="Khóa học đa dạng"
+                        />
+                    </div>
+                </div>
+
+                <div class="feature-item">
+                    <div class="feature-text">
+                        <h2>Theo dõi tiến độ</h2>
+                        <p>
+                            Đặt mục tiêu và theo dõi sự tiến bộ của bạn với công
+                            cụ phân tích chi tiết. Nhận chứng chỉ khi hoàn thành
+                            khóa học và xây dựng hồ sơ năng lực chuyên nghiệp
+                            của bạn.
+                        </p>
+                    </div>
+                    <div class="feature-image">
+                        <img
+                            src="/assets/feature3.jpg"
+                            alt="Theo dõi tiến độ"
+                        />
+                    </div>
+                </div>
+            </section>
+
             <footer>
                 <div class="footer-left">
                     <div class="logo">
