--- a/index.html
+++ b/index.html
@@ -112,19 +112,33 @@
             <footer>
                 <div class="footer-left">
                     <div class="logo">
-                        <img
-                            src="/assets/logo-white.png"
-                            alt="logo"
-                            width="100%"
-                        />
+                        <img src="/assets/logo-white.png" alt="logo" />
                     </div>
                     <p>&copy; 2025 StudyGroup</p>
-                </div>
-                <div class="footer-right">
                     <address id="contact">
                         <i class="fa-solid fa-location-pin"></i> phường Dĩ An,
                         Thành phố Hồ Chí Minh
                     </address>
+                </div>
+
+                <div class="footer-right">
+                    <h3>Kết nối với chúng tôi</h3>
+                    <div class="social-links">
+                        <a
+                            href="https://www.facebook.com/profile.php?id=61581862241773"
+                            class="social-link facebook"
+                            aria-label="Facebook"
+                        >
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                        <a
+                            href="#"
+                            class="social-link tiktok"
+                            aria-label="TikTok"
+                        >
+                            <i class="fa-brands fa-tiktok"></i>
+                        </a>
+                    </div>
                 </div>
             </footer>
         </div>
